--- a/labs/index.html
+++ b/labs/index.html
@@ -160,16 +160,16 @@
         <h2>🧪 Lab 08</h2>
         <p>Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</p>
       </a>
-      <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
+      <a href="/el-pergamino-digital/labs/labs09/" class="lab-card">
         <h2>🧪 Lab 01</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Correlación de vulnerabilidades con exploits conocidos</p>
       </a>
-      <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
-        <h2>🧪 Lab 01</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+      <a href="/el-pergamino-digital/labs/labs10/" class="lab-card">
+        <h2>🧪 Lab 10</h2>
+        <p>Análisis de persistencia y puertas traseras</p>
       </a>
           <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
-        <h2>🧪 Lab 01</h2>
+        <h2>🧪 Lab 11</h2>
         <p>Monitorización de tráfico con Wireshark y tcpdump</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
