--- a/labs/index.html
+++ b/labs/index.html
@@ -161,7 +161,7 @@
         <p>Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs09/" class="lab-card">
-        <h2>🧪 Lab 01</h2>
+        <h2>🧪 Lab 09</h2>
         <p>Correlación de vulnerabilidades con exploits conocidos</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs10/" class="lab-card">
@@ -170,7 +170,7 @@
       </a>
           <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
         <h2>🧪 Lab 11</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Análisis de payloads y técnicas de evasión</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs01/" class="lab-card">
         <h2>🧪 Lab 01</h2>
