--- a/labs/index.html
+++ b/labs/index.html
@@ -186,7 +186,7 @@
       </a>
       <a href="/el-pergamino-digital/labs/labs15/" class="lab-card">
         <h2>🧪 Lab 15</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Persistencia avanzada y manipulación de registros</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs16/" class="lab-card">
         <h2>🧪 Lab 16</h2>
