--- a/labs/index.html
+++ b/labs/index.html
@@ -190,23 +190,23 @@
       </a>
       <a href="/el-pergamino-digital/labs/labs16/" class="lab-card">
         <h2>🧪 Lab 16</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Análisis de tráfico malicioso y detección de C2</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs17/" class="lab-card">
         <h2>🧪 Lab 17</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Análisis de malware y reversing básico</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs18/" class="lab-card">
         <h2>🧪 Lab 18</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Enumeración de servicios y puertos con Nmap</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs19/" class="lab-card">
         <h2>🧪 Lab 19</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Fingerprinting de sistemas operativos y servicios</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs20/" class="lab-card">
         <h2>🧪 Lab 20</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Detección de firewalls y técnicas de evasión</p>
       </a>
       
         
