--- a/labs/index.html
+++ b/labs/index.html
@@ -154,7 +154,7 @@
       </a>
       <a href="/el-pergamino-digital/labs/labs07/" class="lab-card">
         <h2>🧪 Lab 07</h2>
-        <p>Análisis de tráfico capturado (PCAP) y reconstrucción de sesiones</p>
+        <p>Extracción y análisis de hashes de contraseñas</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs08/" class="lab-card">
         <h2>🧪 Lab 08</h2>
@@ -174,7 +174,7 @@
       </a>
       <a href="/el-pergamino-digital/labs/labs12/" class="lab-card">
         <h2>🧪 Lab 12</h2>
-        <p>Monitorización de tráfico con Wireshark y tcpdump</p>
+        <p>Correlación de eventos en tráfico capturado</p>
       </a>
       <a href="/el-pergamino-digital/labs/labs13/" class="lab-card">
         <h2>🧪 Lab 13</h2>
